enable ip address in compute
